--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 /node_modules
 npm-debug.log
 yarn-error.log
+.pnpm-debug.log
+package-lock.json
+yarn.lock
+.pnp.*
 
 # IDEs and editors
 .idea/
@@ -19,8 +23,6 @@ yarn-error.log
 *.launch
 .settings/
 *.sublime-workspace
-
-# Visual Studio Code
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -28,15 +30,46 @@ yarn-error.log
 !.vscode/extensions.json
 .history/*
 
-# Miscellaneous
-/.angular/cache
-.sass-cache/
-/connect.lock
+# Testing
 /coverage
 /libpeerconnection.log
 testem.log
 /typings
+*.spec.js
+*.spec.js.map
+
+# Angular specific
+.angular/
+.sass-cache/
+connect.lock
+*.js.map
+*.css.map
+*.sass.map
+*.scss.map
+
+# e2e
+/e2e/*.js
+/e2e/*.map
+
+# Environment files
+/src/environments/*.js
+/src/environments/*.js.map
+.env
+.env.*
+!.env.example
 
 # System files
 .DS_Store
 Thumbs.db
+*.swp
+*~
+._*
+
+# Build files
+*.tgz
+*.tar.gz
+*.zip
+
+# Debug logs
+debug.log
+*.log
