--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@primeng/themes": "^18.0.0-rc.1",
+    "chart.js": "^4.4.6",
     "primeng": "^18.0.0-rc.1",
     "rxjs": "~7.8.0",
     "tailwindcss-primeui": "^0.3.4",
